strength indicator changes

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
                 <div class="password-input-box">
                     <label for="password" class="inp-label">Enter Password</label>
                     <input type="password" id="pwd" class="pwd"/>
-                    <p>
-                        Password should consist of 8-10 characters, 1 special character, 1
+                    <p class="inp-pwd-cndtn" id="strength-indicator">
+                        Password should consist of 8-12 characters, 1 special character, 1
                         number, and 1 albhabet
                     </p>
                 </div>
                 <div class="confirm-password-input-box">
                     <label for="password" class="inp-label">Confirm Password</label>
                     <input type="password" id="conf-pwd" class="conf-pwd"/>
-                    <p>Password doesn't match</p>
+                    <p class="conf-pwd-alt">Password doesn't match</p>
                 </div>
                 <div class="sub-btn">
                     <button class="submit-btn" type="submit">Submit</button>
